--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,7 +6,7 @@
         background-color: white;
         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     }
-    h1{
+    .header-container h1{
         margin: 8px 0;
         color: rgba(0,0,0,.75);
         font-weight: 700;
