--- a/src/Components/MiniDash/MiniDash.css
+++ b/src/Components/MiniDash/MiniDash.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 415px) and (max-width:1921px){
+@media screen and (min-width: 415px){
     .minidash{
         display: flex;
         justify-content: space-around;
