--- a/src/Components/CountryListing/CountryListing.css
+++ b/src/Components/CountryListing/CountryListing.css
@@ -1,16 +1,20 @@
 @media screen and (min-width: 416px) {
     .listing{
-        display: grid;
-        grid-template-columns: .5fr repeat(2, 1fr);
-        grid-template-rows: .5fr;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px; 
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
         border: .5px solid rgba(0,0,0,.12);
         border-radius: 19px;
         margin: 1REM;
     }
     .listing h2{
         font-size: 18px;
+    }
+    .cflag{
+        height: 100%;
+        width: 30%;
+        padding-left: .5REM;
     }
     .cname {
         color: rgba(0,0,0,.55); 
