--- a/src/Components/Leaderboard/Leaderboard.css
+++ b/src/Components/Leaderboard/Leaderboard.css
@@ -1,19 +1,29 @@
-@media screen and (min-width: 416px){
-    .leaderboard{
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-        overflow: hidden;
-    }
-    .lbheader {
-        display: flex;
-        justify-content: center;
-    }
-    .lbheader h1{
-        text-align: center;
-        width: 50%;
-        font-size: 20px;
-        padding-top: .5REM;
-        color: rgba(0,0,0,.75);
-    }
+.leaderboard{
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    overflow: hidden;
+}
+.lbheader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.lbheader h1,h2{
+    text-align: center;
+    width: 100%;
+    font-size: 20px;
+    color: rgba(0,0,0,.75);
+}
+.lbheader h1{
+    padding-top: .5REM;
+    padding-bottom: 0;
+    margin: 0;
+}
+.lbheader h2{
+    padding-top: .3REM;
+    padding-bottom: 0;
+    margin: 0;
+    font-size: 16px;
 }
