--- a/src/Components/FullDash/FullDash.css
+++ b/src/Components/FullDash/FullDash.css
@@ -1,6 +1,6 @@
 .fulldash {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
 }
