--- a/src/Components/GraphCard/GraphCard.css
+++ b/src/Components/GraphCard/GraphCard.css
@@ -1,10 +1,10 @@
 .graphcard{
-    width: 50%;
+    width: 100%;
     height: 100%;
     margin: 1REM;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
 }
 
