--- a/src/Components/Graph/Graph.css
+++ b/src/Components/Graph/Graph.css
@@ -4,8 +4,20 @@
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;;
 }
-
+.linear{
+    margin-right: 1REM;
+}
+.log h1 {
+    margin: 0;
+}
+.linear h1 {
+    margin: 0;
+}
 .graph p {
     font-size: 18px;
     color: rgba(0,0,0,.75);
