--- a/src/Components/CountryListing/CountryListing.css
+++ b/src/Components/CountryListing/CountryListing.css
@@ -22,6 +22,12 @@
 .cname {
     color: rgba(0,0,0,.55); 
 }
+.cname:active{
+    cursor: pointer;
+}
+.cname:focus{
+    cursor: pointer;
+}
 .ccount {
     color: rgba(230, 0, 0, .55);
 }
